--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,15 +19,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AllTransactionActivity"
+            android:name=".activities.AllTransactionActivity"
             android:label="@string/new_record"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".DialogActivity"
+            android:name=".activities.DialogActivity"
             android:label="@string/new_record"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
         <activity
-            android:name=".AccountsManageActivity"
+            android:name=".activities.AccountsManageActivity"
             android:label="@string/title_activity_crea_conto"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
