--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
 *.iml
-.gradle
+.gradle/
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/.name
+/.idea/compiler.xml
+/.idea/copyright/profile_settings.xml
+/.idea/encodings.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/scopes/scope_settings.xml
+/.idea/vcs.xml
 .DS_Store
-/build
-/captures
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+/*/build
+com_crashlytics_export_strings.xml
+.signin/
+
 .externalNativeBuild
