--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /.idea/workspace.xml
 /.idea/tasks.xml
 /.idea/.name
+.idea/
+/.idea/
 /.idea/compiler.xml
 /.idea/copyright/profile_settings.xml
 /.idea/encodings.xml
