--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -19,16 +19,13 @@
         </activity>
         <activity
             android:name=".activities.AllTransactionActivity"
-            android:label="@string/new_record"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity
-            android:name=".activities.DialogActivity"
-            android:label="@string/new_record"
-            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+            android:parentActivityName="com.example.franc.mygest.activities.MainActivity"
+            android:label="@string/title_filter_activity"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".activities.AccountsManageActivity"
             android:label="@string/title_activity_crea_conto"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light"></activity>
     </application>
 
 </manifest>
